change file name

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>ASTRONAUT</title>
-  <link rel="stylesheet" type="text/css" href="../CSS/space.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="backg">
